# viaplay

./: README.md  requirements.txt  run_tests.sh  setup.cfg  viaplay.json
viaplay/: __init__.py  common.py  config.py
viaplay/api_1_0/: __init__.py  errors.py
viaplay/tests/: fake_movie_info.py  start_fake.sh  test_api.py
