[metadata]
name = viaplay
summary = Provide trailer URL from ViaPlay movie resource link
description-file = README.md
license = GNU
author = Jia Li
author_email = [bigben80@gmail.com]

[files]
packages =
  viaplay 
data_files =
  bin = bin/*

[entry_points]
console_scripts =
    viaplay-api = viaplay:run
    viaplay-version = viaplay:version

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

